Write less files if only counting #agents per norm